fix text word-wrap, like & comment buttons, and numbers for like and comments

--- a/frontend/src/components/body/body.css
+++ b/frontend/src/components/body/body.css
@@ -11,6 +11,10 @@
   margin-top: 40px;
 }
 
+.post {
+  display: flex;
+}
+
 .create-post-container {
   margin-top: 3%;
   margin-bottom: -1%;
@@ -54,6 +58,12 @@
 
   .home-page {
     width: 100%;
+  }
+}
+
+@media only screen and (max-width: 732px) {
+  .main-posts-container {
+    width: 100%
   }
 }
 
