--- a/frontend/src/components/post-item/post-item.css
+++ b/frontend/src/components/post-item/post-item.css
@@ -10,13 +10,21 @@
   border-width: 1.5px;
   border-color: rgba(227, 235, 253, 0.8);
 }
-.post-item-main-image {
+
+.post-item-header {
   display: block;
   width: 100%;
-  max-height: 625px;
+  margin-bottom: 12px;
 }
 
-.post-item-profile {
+//post text input/description
+.post-item-description {
+  margin-left: 2%;
+  word-wrap: break-word;
+  /* padding: 0px 15px; */
+}
+
+.post-item-header-profile {
   position: relative;
   top: 5px;
   margin-left: 15px;
@@ -25,7 +33,13 @@
   width: 45px;
 }
 
-.post-item-name {
+.post-item-header-buttons {
+  position: relative;
+  top: 5px;
+  right: -270px;
+}
+
+.post-item-header-name {
   font-size: 1.3em;
   /* font-weight: bold; */
   position: relative;
@@ -36,41 +50,121 @@
   width: 45px;
 }
 
-.post-item-header {
+.post-item-main-image {
   display: block;
   width: 100%;
-  height: 55px;
+  max-height: 625px;
 }
 
 .post-item-footer {
   display: block;
   width: 100%;
-  height: 150px;
+  height: auto;
 }
 
-.post-item-comment {
-  width: 100px;
-  margin-left: 1%;
-  position: relative;
-  top: 7px;
-  left: 7px;
-  background-color: rgba(227, 235, 253) !important;
-  color: black !important;
-  font-weight: bold !important;
+.post-item-footer-stats {
+  height: 45px;
+  width: 96%;
+  margin-left: 2%;
+  margin-right: 2%;
 }
 
-.post-item-like {
-  width: 70px;
+.post-item-footer-number-like {
   position: relative;
-  top: 7px;
-  left: 7px;
-  background-color: rgba(227, 235, 253) !important;
+  top: 25%;
+  float: left;
+  width: 50%;
+  text-align: center;
+}
+
+.post-item-footer-number-comment {
+  position: relative;
+  top: 25%;
+  float: right;
+  width: 50%;
+  text-align: center;
+}
+
+.post-item-footer-buttons {
+  width: 96%;
+  margin-left: 2%;
+  margin-right: 2%;
+  height: 50px;
+  border-top: 1px solid #E1E1E1;
+  border-bottom: 1px solid #E1E1E1;
+}
+
+.post-item-footer-comment-button {
+  width: 49.5%;
+  height: 48px;
+  position: relative;
+  float: right;
+  //background-color: rgba(227, 235, 253) !important;
+  background-color: white !important;
   color: black !important;
   font-weight: bold !important;
+  border: none !important;
+  border-radius: 0px !important;
+}
+
+.post-item-footer-comment-button:hover {
+  background-color: rgba(227, 235, 253) !important;
+}
+
+.post-item-footer-like-button {
+  width: 50%;
+  height: 48px;
+  position: relative; 
+  float: left;
+  //background-color: rgba(227, 235, 253) !important;
+  background-color: white !important;
+  color: black !important;
+  font-weight: bold !important;
+  border: none !important;
+  border-radius: 0px !important;
+}
+
+.post-item-footer-like-button:hover {
+  background-color: rgba(227, 235, 253) !important;
+}
+
+.post-item-footer-comment {
+  width: 96%;
+  margin-right: 2%;
+  margin-left: 2%;
+}
+
+.post-item-footer-comment-box {
+  width: 100%;
+}
+
+.comment-box {
+  width: 90%;
+  height: 50px;
+  border: none;
+  border-top: 1px solid #E1E1E1;
+  padding-top: 0;
+}
+
+.comment-post {
+  width: 10%;
+  height: 50px;
+  background-color: white;
+  border: none;
+  border-top: 1px solid #E1E1E1;
+  word-wrap: break-word;
+  color: #007bff;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  monospace;
 }
 
 @media only screen and (max-width: 732px) {
   .post-item-main-image {
     max-width: 732px;
+  }
+
+  .post-item-header-buttons {
+    position: relative;
+    right: -20px;
   }
 }
